update sedona installation doc

--- a/docs/01.Install_sedona_with_pyspark.md
+++ b/docs/01.Install_sedona_with_pyspark.md
@@ -28,8 +28,46 @@ For Spark 3.4+ and Scala 2.12, it is called `sedona-spark-shaded-3.4_2.12-1.5.1.
 
 Another jar is the `geotools-wrapper`
 
-## Create a sedona session
+## Create a sedona session without internet
+If you don't have internet access, you can import the required jars into your server.
+Then create the sedona context with the local jars.
+
+```shell
+# build a sedona session offline
+jar_folder = Path(r"/home/pengfei/git/PySparkCommonFunc/jars")
+jar_list = [str(jar) for jar in jar_folder.iterdir() if jar.is_file()]
+jar_path = ",".join(jar_list)
+
+# build a sedona session (sedona = 1.5.1)
+config = SedonaContext.builder() \
+    .appName("Sedona with pyspark") \
+    .master("local[*]") \
+    .config("spark.driver.memory", "9g") \
+    .config('spark.jars', jar_path). \
+    getOrCreate()
+
+# create a sedona context
+sedona = SedonaContext.create(config)
+```
+
+
+## Create a sedona session with internet
+
+If you have internet access, you can use a maven url to specify which jar package you need
 
 ```shell
 
+# build a sedona session (sedona = 1.5.1)
+config = SedonaContext.builder() \
+    .appName("Sedona with pyspark") \
+    .master("local[*]") \
+    .config("spark.driver.memory", "9g") \
+    .config('spark.jars.packages',
+            'com.acervera.osm4scala:osm4scala-spark3-shaded_2.12:1.0.11,' 
+            'org.apache.sedona:sedona-spark-shaded-3.0_2.12:1.4.1,' 
+            'org.datasyslab:geotools-wrapper:1.4.0-28.2'). \
+     getOrCreate()
+
+# create a sedona context
+sedona = SedonaContext.create(config)
 ```
