--- a/notebooks/03.sedona_read_osm_pbf.ipynb
+++ b/notebooks/03.sedona_read_osm_pbf.ipynb
@@ -10,24 +10,8 @@
     "\n",
     "## 1. Get the sample data\n",
     "\n",
-    "## 2. Read the PBF format with Sedona(Spark)\n",
-    "\n",
-    "By default, sedona can not read PBF file directly. But there is a `spark polyglot connector` called [osm4scala](https://simplexspatial.github.io/osm4scala/). You can also visit their github page [here](https://github.com/simplexspatial/osm4scala) \n",
-    "\n",
-    "To make it work, it's quite simple:\n",
-    "- online mode: In the sparkSession creation clause add the **.config('spark.jars.packages','com.acervera.osm4scala:osm4scala-spark3-shaded_2.12:1.0.11')**\n",
-    "- offline mode: You need to download the jar file first, then in the sparkSession creation clause add the **.config(''spark.jars', jar_path')**\n",
-    "\n",
-    "> You can find more information about the jar file [here](https://simplexspatial.github.io/osm4scala/docs/spark-connector)\n",
-    "\n",
-    "## 3. Understand the basic OSM data structure\n",
-    "\n",
-    "OpenStreetMap uses a `topological data structure`, with `four core elements` (aka data primitives):\n",
-    "\n",
-    "- **Nodes**: are points with a geographic position, stored as coordinates (pairs of a latitude and a longitude) according to `WGS 84`. Outside their usage in ways, they are used to represent map features without a size, such as `points of interest` or mountain peaks.\n",
-    "- **Ways**: are ordered lists of `nodes`, representing a `polyline, or possibly a polygon` if they form a closed loop. They are used both for representing linear features such as streets and rivers, and areas, like forests, parks, parking areas and lakes.\n",
-    "- **Relations**: are `ordered lists of nodes, ways and relations` (together called \"members\"), where each member can optionally have a \"role\" (a string). Relations are used for representing the relationship of existing nodes and ways. Examples include turn restrictions on roads, routes that span several existing ways (for instance, a long-distance motorway), and areas with holes.\n",
-    "- **Tags**: are `key-value pairs (both arbitrary strings)`. They are used to store metadata about the map objects (such as their type, their name and their physical properties). `Tags are not freestanding, but are always attached to an object: to a node, a way or a relation`. A recommended ontology of map features (the meaning of tags) is maintained on a wiki. New tagging schemes can always be proposed by a popular vote of a written proposal in OpenStreetMap wiki, however, there is no requirement to follow this process. There are over 89 million different kinds of tags in use as of June 2017."
+    "The sample data which I will use in this tutorial is the download from this page \n",
+    "https://download.geofabrik.de/europe/france.html . I use the `Ile-de-France` map (`ile-de-france-latest.osm.pbf`)\n"
    ],
    "metadata": {
     "collapsed": false
@@ -137,6 +121,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 2. Read the PBF format with Sedona(Spark)\n",
+    "\n",
+    "By default, sedona can not read PBF file directly. But there is a `spark polyglot connector` called [osm4scala](https://simplexspatial.github.io/osm4scala/). You can also visit their github page [here](https://github.com/simplexspatial/osm4scala) \n",
+    "\n",
+    "To make it work, it's quite simple:\n",
+    "- online mode: In the sparkSession creation clause add the **.config('spark.jars.packages','com.acervera.osm4scala:osm4scala-spark3-shaded_2.12:1.0.11')**\n",
+    "- offline mode: You need to download the jar file first, then in the sparkSession creation clause add the **.config(''spark.jars', jar_path')**\n",
+    "\n",
+    "> You can find more information about the jar file [here](https://simplexspatial.github.io/osm4scala/docs/spark-connector)\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "bef84e49d8e1bd71"
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "8079ba9c1f1c1f4b",
@@ -168,6 +171,27 @@
    "source": [
     "raw_df = sedona.read.format(\"osm.pbf\").load(filePath)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3. Explore the OSM dataset\n",
+    "\n",
+    "### 3.1 Understand the basic OSM data structure\n",
+    "\n",
+    "OpenStreetMap uses a `topological data structure`, with `four core elements` (aka data primitives):\n",
+    "\n",
+    "- **Nodes**: are points with a geographic position, stored as coordinates (pairs of a latitude and a longitude) according to `WGS 84`. Outside their usage in ways, they are used to represent map features without a size, such as `points of interest` or mountain peaks.\n",
+    "- **Ways**: are ordered lists of `nodes`, representing a `polyline, or possibly a polygon` if they form a closed loop. They are used both for representing linear features such as streets and rivers, and areas, like forests, parks, parking areas and lakes.\n",
+    "- **Relations**: are `ordered lists of nodes, ways and relations` (together called \"members\"), where each member can optionally have a \"role\" (a string). Relations are used for representing the relationship of existing nodes and ways. Examples include turn restrictions on roads, routes that span several existing ways (for instance, a long-distance motorway), and areas with holes.\n",
+    "- **Tags**: are `key-value pairs (both arbitrary strings)`. They are used to store metadata about the map objects (such as their type, their name and their physical properties). `Tags are not freestanding, but are always attached to an object: to a node, a way or a relation`. A recommended ontology of map features (the meaning of tags) is maintained on a wiki. New tagging schemes can always be proposed by a popular vote of a written proposal in OpenStreetMap wiki, however, there is no requirement to follow this process. There are over 89 million different kinds of tags in use as of June 2017.\n",
+    "\n",
+    "![OpenStreetMap_data_primitives_in_iD.png](../images/OpenStreetMap_data_primitives_in_iD.png)"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7d25fed3fed14152"
   },
   {
    "cell_type": "code",
@@ -300,6 +324,18 @@
    "source": [
     "raw_df.write.mode(\"overwrite\").format(\"parquet\").save(outPath)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Here we also test the geoparquet and parquet format. The .pbf format is smaller than parquet file (293Mo vs 856 Mo), which surprised me a little.\n",
+    "\n",
+    "> We can't write geoparquet, because there is no geometry column"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "b2fd7b1cebe0c14a"
   },
   {
    "cell_type": "markdown",
