--- a/notebooks/03.sedona_read_osm_pbf.ipynb
+++ b/notebooks/03.sedona_read_osm_pbf.ipynb
@@ -1081,9 +1081,9 @@
     "    :type long_col_name: str\n",
     "    :param lat_col_name: latitude column name\n",
     "    :type lat_col_name: str\n",
-    "    :param source_epsg_code: the csr code of the input gps coordiantes\n",
+    "    :param source_epsg_code: the csr code of the input gps coordinates\n",
     "    :type source_epsg_code: str\n",
-    "    :param target_epsg_code: the csr code of the output gps coordiantes\n",
+    "    :param target_epsg_code: the csr code of the output gps coordinates\n",
     "    :type target_epsg_code: str\n",
     "    :param target_geo_col_name: \n",
     "    :type target_geo_col_name: \n",
