--- a/notebooks/01.Sedona_QuickStart.ipynb
+++ b/notebooks/01.Sedona_QuickStart.ipynb
@@ -1,30 +1,40 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2024-04-09T11:43:39.702051254Z",
-     "start_time": "2024-04-09T11:43:37.144965777Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Skipping SedonaKepler import, verify if keplergl is installed\n",
-      "Skipping SedonaPyDeck import, verify if pydeck is installed\n"
-     ]
-    }
+   "cell_type": "markdown",
+   "source": [
+    "# Sedona quick start\n",
+    "\n",
+    "In this tutorial, we will show how to use sedona to do some basic geometry analytics"
    ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "2cd021f7f60e5b17"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from sedona.spark import *\n",
-    "from pathlib import Path"
-   ]
+    "from pathlib import Path\n",
+    "\n",
+    "# import sedona constructor function, often used to build geometry type column from native data type \n",
+    "from sedona.sql import st_constructors as stc\n",
+    "\n",
+    "# import sedona simple function, often used to do geometry calculation such as ST_Distance, \n",
+    "from sedona.sql import st_functions as stf\n",
+    "\n",
+    "# import sedona predicates function, often used to determine relation between two geometry column such as ST_Contains\n",
+    "from sedona.sql import st_predicates as stp\n",
+    "# import sedona aggregates function,\n",
+    "from sedona.sql import st_aggregates"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fb3df0bf3041970d"
   },
   {
    "cell_type": "code",
