--- a/notebooks/05.Test_ORSM_API.ipynb
+++ b/notebooks/05.Test_ORSM_API.ipynb
@@ -166,7 +166,12 @@
     "    }\n",
     "  ]\n",
     "}\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "You can call the rest api by using\n",
+    "```shell\n",
+    "curl -k \"http://127.0.0.1:5000/route/v1/driving/2.309167,48.819552;2.467290,48.758568?steps=false\"\n",
+    "```"
    ],
    "metadata": {
     "collapsed": false
@@ -186,7 +191,7 @@
     }
    ],
    "source": [
-    "! curl -k \"https://maps-api.casd.local/route/v1/driving/2.309167,48.819552;2.467290,48.758568?steps=false\""
+    "! curl -k \"https://maps-api.casd.local/route/v1/driving/2.309167,48.819552;2.467290,48.758568?steps=false\"\n"
    ],
    "metadata": {
     "collapsed": false,
