--- a/notebooks/05.Test_ORSM_API.ipynb
+++ b/notebooks/05.Test_ORSM_API.ipynb
@@ -26,8 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skipping SedonaKepler import, verify if keplergl is installed\n",
+      "Skipping SedonaPyDeck import, verify if pydeck is installed\n"
+     ]
+    }
+   ],
    "source": [
     "from sedona.spark import *\n",
     "from sedona.sql import st_functions as stf\n",
@@ -39,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T15:00:23.802085388Z",
-     "start_time": "2024-04-24T15:00:23.743597326Z"
+     "end_time": "2024-04-29T13:02:19.804431980Z",
+     "start_time": "2024-04-29T13:02:19.461049823Z"
     }
    },
    "id": "9dcb585a3bd3ad2c"
@@ -53,9 +62,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24/04/24 09:54:33 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
-      "24/04/24 09:54:33 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "24/04/24 09:54:34 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/04/29 15:02:25 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "24/04/29 15:02:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/04/29 15:02:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -92,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-24T07:54:50.248717105Z",
-     "start_time": "2024-04-24T07:54:29.599204312Z"
+     "end_time": "2024-04-29T13:02:40.056093975Z",
+     "start_time": "2024-04-29T13:02:21.069075324Z"
     }
    },
    "id": "92685d5d39ab000a"
@@ -474,8 +483,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "outputs": [],
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "converted_centroid_path = \"/home/pengfei/data_set/kaggle/geospatial/converted_centroid_of_french_commune\"\n",
     "converted_centroid_df=sedona.read.parquet(converted_centroid_path)"
@@ -483,8 +500,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-25T12:05:01.647002047Z",
-     "start_time": "2024-04-25T12:05:00.656689096Z"
+     "end_time": "2024-04-29T12:47:11.810201640Z",
+     "start_time": "2024-04-29T12:47:09.993901790Z"
     }
    },
    "id": "39094167cffdcbe2"
@@ -603,6 +620,58 @@
     }
    },
    "id": "50c8c7ac3df54cd6"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "full_code_list = [row.insee for row in converted_centroid_df.select(col(\"insee\")).collect()]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-29T12:52:55.609937802Z",
+     "start_time": "2024-04-29T12:52:54.787287268Z"
+    }
+   },
+   "id": "4aa76ef6750b3fbd"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "98fe987947b08ba1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "code list length: 34955\n",
+      "first element of the code list: 2B222\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"code list length: {len(full_code_list)}\")\n",
+    "print(f\"first element of the code list: {full_code_list[0]}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-29T12:54:00.581051491Z",
+     "start_time": "2024-04-29T12:54:00.509879547Z"
+    }
+   },
+   "id": "bc5c12f55a04b689"
   },
   {
    "cell_type": "code",
