--- a/notebooks/05.Test_ORSM_API.ipynb
+++ b/notebooks/05.Test_ORSM_API.ipynb
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-29T13:02:19.804431980Z",
-     "start_time": "2024-04-29T13:02:19.461049823Z"
+     "end_time": "2024-04-30T14:59:36.405828965Z",
+     "start_time": "2024-04-30T14:59:35.161674020Z"
     }
    },
    "id": "9dcb585a3bd3ad2c"
@@ -62,9 +62,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "24/04/29 15:02:25 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
-      "24/04/29 15:02:25 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "24/04/29 15:02:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "24/04/30 16:59:38 WARN Utils: Your hostname, pengfei-Virtual-Machine resolves to a loopback address: 127.0.1.1; using 10.50.2.80 instead (on interface eth0)\n",
+      "24/04/30 16:59:38 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "24/04/30 16:59:39 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     },
     {
@@ -101,8 +101,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-29T13:02:40.056093975Z",
-     "start_time": "2024-04-29T13:02:21.069075324Z"
+     "end_time": "2024-04-30T14:59:53.483506548Z",
+     "start_time": "2024-04-30T14:59:36.410340593Z"
     }
    },
    "id": "92685d5d39ab000a"
@@ -1322,6 +1322,255 @@
     "collapsed": false
    },
    "id": "49791ef091b6924c"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Read the result parquet file"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9c5c020fd7380a61"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+--------------------+----------+---------------+-----------------+------------+\n",
+      "|      source_nom|            dest_nom|dest_insee|distance(meter)|duration(minutes)|source_insee|\n",
+      "+----------------+--------------------+----------+---------------+-----------------+------------+\n",
+      "|Solaure en Diois|    Villy-le-Moutier|     21708|       342752.1|           253.47|       26001|\n",
+      "|Solaure en Diois|                Gacé|     61181|       783677.8|           553.25|       26001|\n",
+      "|Solaure en Diois|               Lasse|     64322|       782639.5|           525.71|       26001|\n",
+      "|Solaure en Diois|            Biarritz|     64122|       778535.4|           495.96|       26001|\n",
+      "|Solaure en Diois|             Bettant|     01041|       235444.7|           181.55|       26001|\n",
+      "|Solaure en Diois|  Plancher-les-Mines|     70414|       539693.1|           375.01|       26001|\n",
+      "|Solaure en Diois|                Oizé|     72226|       746532.8|           504.56|       26001|\n",
+      "|Solaure en Diois|Vacqueriette-Erqu...|     62834|       835834.1|           582.51|       26001|\n",
+      "|Solaure en Diois|              Aramon|     30012|       181659.6|           148.07|       26001|\n",
+      "|Solaure en Diois|Saint-Privat-de-C...|     30293|         153661|           153.78|       26001|\n",
+      "|Solaure en Diois|Montagna-le-Recon...|     39346|       297184.9|           217.75|       26001|\n",
+      "|Solaure en Diois|             Rillans|     25492|       462545.5|           309.34|       26001|\n",
+      "|Solaure en Diois|           Trébrivan|     22344|      1045149.8|           719.25|       26001|\n",
+      "|Solaure en Diois|Saint-Martin-Valm...|     15202|         333665|           339.89|       26001|\n",
+      "|Solaure en Diois|         Vecqueville|     52512|       514859.7|           363.09|       26001|\n",
+      "|Solaure en Diois|               Arnac|     15011|       363959.7|            373.1|       26001|\n",
+      "|Solaure en Diois|            Lamastre|     07129|       112290.9|           114.26|       26001|\n",
+      "|Solaure en Diois|Saint-Sauveur-en-...|     89368|       512297.3|           369.11|       26001|\n",
+      "|Solaure en Diois|       Port-d'Envaux|     17285|       841054.3|           538.45|       26001|\n",
+      "|Solaure en Diois|              Blaisy|     52053|       483244.8|           336.68|       26001|\n",
+      "+----------------+--------------------+----------+---------------+-----------------+------------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "prod_result_file_path = \"/home/pengfei/data_set/fr_commune_distance/duration_prod\"\n",
+    "\n",
+    "df = sedona.read.parquet(prod_result_file_path)\n",
+    "df.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T15:02:11.851106474Z",
+     "start_time": "2024-04-30T15:02:06.105242825Z"
+    }
+   },
+   "id": "f0635581945f9457"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 16:====================================================> (137 + 3) / 140]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total row: 19434424\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "total_row = df.count()\n",
+    "print(f\"total row: {total_row}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T15:31:09.080677651Z",
+     "start_time": "2024-04-30T15:31:02.819401276Z"
+    }
+   },
+   "id": "2f5629787eafd469"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "code_insee_df = df.select(\"source_insee\").distinct()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T15:03:36.142359209Z",
+     "start_time": "2024-04-30T15:03:36.004230337Z"
+    }
+   },
+   "id": "7600e18adb0475f1"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "row_number = code_insee_df.count()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T15:04:10.426784960Z",
+     "start_time": "2024-04-30T15:03:59.132541086Z"
+    }
+   },
+   "id": "ad8a06592db2978c"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 13:====================================================> (137 + 3) / 140]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+\n",
+      "|source_insee|\n",
+      "+------------+\n",
+      "|       07200|\n",
+      "|       62646|\n",
+      "|       59569|\n",
+      "|       02747|\n",
+      "|       43105|\n",
+      "|       07198|\n",
+      "|       07340|\n",
+      "|       42097|\n",
+      "|       60445|\n",
+      "|       59256|\n",
+      "|       59346|\n",
+      "|       02726|\n",
+      "|       77440|\n",
+      "|       59600|\n",
+      "|       59625|\n",
+      "|       77293|\n",
+      "|       59408|\n",
+      "|       2B213|\n",
+      "|       02056|\n",
+      "|       02718|\n",
+      "+------------+\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "code_insee_df.show()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T15:04:23.279825574Z",
+     "start_time": "2024-04-30T15:04:14.841052918Z"
+    }
+   },
+   "id": "b2c51ec9569a94be"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total code count:552\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"total code count:{row_number}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-30T15:04:39.589845907Z",
+     "start_time": "2024-04-30T15:04:39.415780409Z"
+    }
+   },
+   "id": "6818013871366b3a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "770d6e4776f9352d"
   }
  ],
  "metadata": {
