--- a/docs/01.Install_sedona_with_pyspark.md
+++ b/docs/01.Install_sedona_with_pyspark.md
@@ -1,4 +1,8 @@
-# Install sedona with python/pyspark
+# Sedona
+
+
+
+## Install sedona with python/pyspark
 
 Sedona is a framework which can do geospatial calculation. It can work on top of the spark. In this tutorial, we will
 show how to make sedona works with pyspark
